--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -4,6 +4,8 @@
  * By Hakim El Hattab, http://hakim.se
  */
 @import url(../../lib/font/source-sans-pro/source-sans-pro.css);
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@100;200;300;400;500;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta+Malar:wght@200;300;400;500;600;700;800&display=swap');
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -15,9 +17,9 @@ body {
   background-color: #fff; }
 
 .reveal {
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
-  font-size: 42px;
-  font-weight: normal;
+  font-family: "Arima Madurai", "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 28px;
+  font-weight: lighter;
   color: #222; }
 
 ::selection {
@@ -46,7 +48,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #222;
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: "Arima Madurai", "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
@@ -73,8 +75,32 @@ body {
  * OTHER
  *********************************************/
 .reveal p {
+  font-family: "Mukta Malar", "Source Sans Pro", Helvetica, sans-serif;
   margin: 20px 0;
   line-height: 1.3; }
+
+.reveal p.kural {
+  font-family: "Arima Madurai",  "Source Sans Pro", Helvetica, sans-serif;
+  font-weight: bold;
+  text-align: left; 
+  /* margin-top: 2em;
+  margin-bottom: 2em;  */
+  /* display: block; */
+  position: relative;
+  /* width: 70%; */
+  margin: 100px auto;
+  padding: 5px;
+  /* font-style: italic; */
+  /* background: rgba(255, 255, 255, 0.05); */
+  /* box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);  */
+  /* border-radius: 10px; */
+}
+
+.comment {
+  text-align: justify;
+  font-size: 0.75em;
+}
+
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
